# rss_reader

./: .gitignore  LICENSE  mise.toml
backend/: Cargo.toml
frontend/: README.md  angular.json  package.json  pnpm-lock.yaml
frontend/src/: index.html
frontend/src/app/: app.component.spec.ts  app.component.ts
