[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
sea-orm = { version = "1.1.4", features = [ "sqlx-sqlite", "runtime-tokio", "macros" ] }
log = "0.4.25"
env_logger = "0.11.6"
